--- a/404.md
+++ b/404.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: "Page Not Found"
-description: "Page not found. I wonder who'll ever read this description..."
+description: "Page not found."
 comments: false
 share: false
 permalink: /404.html
 ---  
 
-Sorry, but the page you were trying to view does not exist --- how does shit like this even happen in the 21st century?
+I don't even
