--- a/_posts/2017-09-19-new-blog.md
+++ b/_posts/2017-09-19-new-blog.md
@@ -21,5 +21,4 @@ but I'll try to keep it varied and also talk about other interesting things.
 I will try to include code whenever necessary, but for more complex projects you can check out [my Github](https://github.com/danielegrattarola).
 You can also finde me on [Twitter](https://twitter.com/riceasphait) and [Instagram](https://www.instagram.com/riceasphait/) as @riceasphait.
 
-Cheers,
-Daniele
+Cheers!
