--- a/_posts/2017-09-19-new-blog.md
+++ b/_posts/2017-09-19-new-blog.md
@@ -8,7 +8,7 @@ date-string: SEPTEMBER 19, 2017
 
 ![Australian Outback (ph. Daniele Grattarola)]({{ site.url }}/images/header/header.jpg)
 
-This blog is an updated version of my old edgy, teenage-years blog at <a href="exsubstantia.com">exsubstantia.com</a>.
+This blog is an updated version of my old edgy, teenage-years blog at <a href="http://exsubstantia.com">exsubstantia.com</a>.
 I kept a somewhat similar style because I like the way Exsubstantia looks, but i hope that the difference in content
 will speak for itself.
 
