* Errors in first post

--- a/_posts/2017-09-19-new-blog.md
+++ b/_posts/2017-09-19-new-blog.md
@@ -14,11 +14,11 @@ will speak for itself.
 
 I will use this blog to talk mostly about two things: 
 
-1. Interesting concepts that I come across when working on my research and projects
-2. Interesting stuff that I come across when traveling around
+1. interesting concepts that I come across when working on my research and projects
+2. interesting stuff that I come across when traveling around
 
-but I'll try to keep it varied and also talk about other interesting things. 
+but I'll try to keep it varied, and also talk about other interesting things. 
 I will try to include code whenever necessary, but for more complex projects you can check out [my Github](https://github.com/danielegrattarola).
-You can also finde me on [Twitter](https://twitter.com/riceasphait) and [Instagram](https://www.instagram.com/riceasphait/) as @riceasphait.
+You can also find me on [Twitter](https://twitter.com/riceasphait) and [Instagram](https://www.instagram.com/riceasphait/) as @riceasphait.
 
 Cheers!
