--- a/_posts/2017-09-19-new-blog.md
+++ b/_posts/2017-09-19-new-blog.md
@@ -2,11 +2,11 @@
 layout: post
 categories: posts
 title: New Blog
-tags: [update]
+tags: [Update]
 date-string: SEPTEMBER 19, 2017
 ---
 
-![Australian Outback (ph. Daniele Grattarola)]({{ site.url }}/images/header/oz.jpg)
+![Australian Outback (ph. Daniele Grattarola)]({{ site.url }}/images/header/oz.jpg){: .full-width}
 
 This blog is an updated version of my old edgy, teenage-years blog at <a href="http://exsubstantia.com">exsubstantia.com</a>.
 I kept a somewhat similar style because I like the way Exsubstantia looks, but I hope that the difference in content
