Added og images

--- a/_posts/2017-09-19-new-blog.md
+++ b/_posts/2017-09-19-new-blog.md
@@ -2,6 +2,7 @@
 layout: post
 categories: posts
 title: New Blog
+image: /images/header/oz.jpg
 tags: [update]
 date-string: SEPTEMBER 19, 2017
 ---
