* Update about.md * Update 404.md

--- a/404.md
+++ b/404.md
@@ -1,10 +1,13 @@
 ---
 layout: post
-title: "Page Not Found"
+title: "LMFAO"
 description: "Page not found."
 comments: false
 share: false
 permalink: /404.html
 ---  
 
-I don't even
+<video controls>
+	<source src="files/llama.mp4" type="video/mp4">
+	Your browser does not support the video tag.
+</video>
