Corrected some mistakes in last post

--- a/_posts/2018-06-07-ccm-paper.md
+++ b/_posts/2018-06-07-ccm-paper.md
@@ -42,7 +42,7 @@ Let's take a global view of the algorithm before diving into the details. The im
 2. Train the AE to embed the graphs on a CCM
 3. Take a stream of graphs that _may_ eventually change to the non-nominal regime
 4. Use the encoder to map the stream to the CCM
-5. Run a change detection test on the CCM to identify changes the stream
+5. Run a change detection test on the CCM to identify changes in the stream
 
 The sequence of graphs in step 1 is also mapped to the CCM and used to configure the change detection test (more on that later).  
 In a real-world scenario, step 3 is the stream of graphs observed by the algorithm after being deployed, where we have no information on the real state of the system. To test our methodology, however, we consider a stream of graphs with a known change point, and use it as ground truth to evaluate performance.  
@@ -128,7 +128,7 @@ For the synthetic scenario, we considered graphs obtained as the [Delaunay trian
 ![iEEG data]({{ site.url }}/images/2018-06-07/ieeg.png){: .full-width}
 
 For the seizure detection scenario, we considered Kaggle's [UPenn and Mayo Clinic's Seizure Detection Challenge](https://www.kaggle.com/c/seizure-detection) and [American Epilepsy Society Seizure Prediction Challenge](https://www.kaggle.com/c/seizure-prediction) datasets, composed of iEEG signals for different human and dog patients, with a different number of electrodes attached to each patient resulting in different multivariate signals.   
-The signals are provided in 1-second i.i.d. clips of different classes (the nominal _interictal_ states where the patient is fine, and the non-nominal _ictal_ states where the patient is having a seizure), for each patient, and the original task of the challenge is to classify the clips correctly.  
+The signals are provided in 1-second i.i.d. clips of different classes for each patient (the nominal _interictal_ states where the patient is fine, and the non-nominal _ictal_ states where the patient is having a seizure), and the original task of the challenge is to classify the clips correctly.  
 Since a common approach in neuroscience to deal with iEEG data is to build [functional connectivity networks](https://www.frontiersin.org/articles/10.3389/fnsys.2015.00175/full) to study the relationships between different areas of the brain, especially during rare episodes like seizures, this task was the perfect playground to test our complex methodology. 
 We converted each 1-second clip to a graph using Pearson's correlation as functional connectivity measure, and the topmost 4 wavelet coefficients of each signal as node attributes.  
 To simulate the graph streams, we used the labeled training data from the challenges to build the training and operational streams for each patient, where a change in the stream simply consisted in sampling graphs from the ictal class instead of the nominal.
