--- a/_posts/2018-06-07-ccm-paper.md
+++ b/_posts/2018-06-07-ccm-paper.md
@@ -155,13 +155,12 @@ We're already working on new applications of this framework, to showcase what we
 
 ## Credits
 
-Code for replicating our experiments will be published on [my Github](https://github.com/danielegrattarola)
-soon.  
+The code for replicating our experiments is available on [my Github](https://github.com/danielegrattarola/cdt_aae).  
 If you wish to cite this work, you can refer to the Arxiv preprint for now: 
 
 ```
 @article{grattarola2018learning,
-  title={Learning Graph Embeddings on Constant-Curvature Manifolds for Change Detection in Graph Streams},
+  title={Change Detection in Graph Streams by Learning Graph Embeddings on Constant-Curvature Manifolds},
   author={Grattarola, Daniele and Zambon, Daniele and Alippi, Cesare and Livi, Lorenzo},
   journal={arXiv preprint arXiv:1805.06299},
   year={2018}
