--- a/_posts/2018-06-07-ccm-paper.md
+++ b/_posts/2018-06-07-ccm-paper.md
@@ -156,13 +156,14 @@ We're already working on new applications of this framework, to showcase what we
 ## Credits
 
 The code for replicating our experiments is available on [my Github](https://github.com/danielegrattarola/cdt-ccm-aae).  
-If you wish to cite this work, you can refer to the Arxiv preprint for now: 
+If you wish to reference our paper, you can cite: 
 
 ```
-@article{grattarola2018learning,
+@article{grattarola2018change,
   title={Change Detection in Graph Streams by Learning Graph Embeddings on Constant-Curvature Manifolds},
-  author={Grattarola, Daniele and Zambon, Daniele and Alippi, Cesare and Livi, Lorenzo},
-  journal={arXiv preprint arXiv:1805.06299},
-  year={2018}
+  author={Grattarola, Daniele and Zambon, Daniele and Livi, Lorenzo and Alippi, Cesare},
+  journal={IEE Transactions on Neural Networks and Learning Systems},
+  year={2019},
+  doi={10.1109/TNNLS.2019.2927301}
 }
 ```
