--- a/404.md
+++ b/404.md
@@ -1,13 +1,10 @@
 ---
 layout: post
-title: "LMFAO"
+title: "404"
 description: "Page not found."
 comments: false
 share: false
 permalink: /404.html
 ---  
 
-<video controls>
-	<source src="files/llama.mp4" type="video/mp4">
-	Your browser does not support the video tag.
-</video>
+There's nothing here.
